WoPeD 3.7.1 (2018/08/01)
- P2T can now handle workflow net operators
- HTML and CSV output of quantitative simulation logs
- Improved P2T webservice interface
- More meaningful messages and translations
- Re-enabled BPEL tab in editor window
- Bug fixes and clean-ups

WoPeD 3.7.0 (2018/06/26)
- Webservice support for Text2Process
- Enhanced T2P GUI
- Nicer icons for P2T and T2P
- Bug fixes

WoPeD 3.6.1 (2017/11/23)
- Improved Apromore import (requires server of AProMoRe release 1.1.0 or higher)
- Added XES log export to quantitative simulation (thanks to Joerg Evermann)
- Fixed bug with ArcPropertyDialog position in scroll mode
- Fixed bug with CG construction fail in case of nodes with same label
- Removed access to outdated features of BPEL export
- Tidy up some GUI features

WoPeD 3.6.0 (2017/05/22)
- New coverability graph assistant with interactive construction
- Added feature for using arc weights in Petri net models
- Minor bug fixes

WoPeD 3.5.3 (2017/01/24)
- Fixed bug in TransitionPropertyEditor concerning resource trigger and enabling of service time settings
- Fixed bug in showing contributors in About dialog

WoPeD 3.5.2 (2016/11/22)
- Fixed bug in token game with XORSplitJoin operator
- Various small bugfixes

WoPeD 3.5.1 (2016/07/05)
- Bug fix with AProMoRe server settings dialog
- Minimum Java requirement now is Java 8

WoPeD 3.5.0 (2016/06/17)
- Improved AProMoRe import/export interface
- Added interactive Process2Text interface
- Added new quantitative simulation dashboard
- Extended configuration dialogs for AProMoRe, P2T and dashboard
- Lots of small bug fixes

WoPeD 3.2.0 (2014/05/31)
- Redesign of MacOS user interface
- Added keyboard shortcuts for relevant GUI functions
- Redesign of built-in help browser
- Integration of interface to AProMoRe server (import and export)
- WoPeD help to be displayed over standard web browser
- Bug fixes

WoPeD 3.1.0 (2013/03/27)
- Added community features (linkage to WoPeD forum and FAQ on website)