@@ -867,7 +867,7 @@ P2T.text								= Convert Process to Text
 P2T.openP2T.text						= Process2Text
 P2T.openP2T.header                      = Input Text
 P2T.tooltip								= Generate textual description
-P2T.loading								= Loading ...
+P2T.loading								= Generating text...
 P2T.Error.ArcWeights.title              = Text generation failed
 P2T.Error.ArcWeights.message            = The net contains arc weights.\nArc weights are not supported by the process 2 text feature.
 #*************
@@ -877,7 +877,6 @@ T2P.textBandTitle						= T2P
 T2P.text								= Convert Text to Process
 T2P.openT2P.text						= Text2Process
 T2P.tooltip								= Generate Process from Text
-T2P.loading								= Loading ...
 T2P.Error.ArcWeights.title              = Process generation failed
 T2P.Error.ArcWeights.message            = The net contains arc weights.\nArc weights are not supported when creating a process from text.
 
@@ -1101,7 +1100,7 @@ T2PUI.HowTo 				= Please enter you text here or upload it from a file. Afterward
 						 	   \ \n\n\Hint: In order to create a branching control flow, the keywords "or" resp. "and" must be used within a sentence.
 T2PUI.Lang 					= Language:
 T2PUI.Lang.English 			= English
-T2PUI.Loading.Text 			= Is Loading...
+T2PUI.Loading.Text 			= Generating Petrinet model ...
 T2PUI.Loading.Title 		= Loading
 T2PUI.Loading.Cancel 		= Cancel
 T2PUI.NoText.Title 			= Empty editor
@@ -2372,7 +2371,7 @@ Paraphrasing.Up.Mnemonic										=
 Paraphrasing.Cancel.Image										= /org/woped/gui/images/cancel.gif
 Paraphrasing.Cancel.Icon										= /org/woped/gui/images/cancel.gif
 Paraphrasing.Webservice.Success.Title							= Success
-Paraphrasing.Webservice.Success.Message							= Webservice successfully contacted at URL\n%0
+Paraphrasing.Webservice.Success.Message							= %0 webservice successfully contacted!
 Paraphrasing.Webservice.Error.Title								= Error
 Paraphrasing.Webservice.Error.Exception.Message					= Errors occurred while contacting the webservice at URL\n%0 
 Paraphrasing.Webservice.Error.Webserviceexception.Message		= Could not contact webservice at URL\n%0
