@@ -472,7 +472,7 @@ P2T.text					  = In Text umwandeln
 P2T.openP2T.text			  = Process zu Text
 P2T.openP2T.header            = Eingabetext
 P2T.tooltip				 	  = Textuelle Beschreibung erzeugen
-P2T.loading					  = Laden ...
+P2T.loading					  = Erzeuge Text...
 P2T.Error.ArcWeights.title    = Textgenerierung fehlgeschlagen
 P2T.Error.ArcWeights.message  = Das Netz verwendet Kantengewichte. \nKantengewichte werden bei der Textgenerierung nicht unterst\u00FCtzt.
 #*************
@@ -482,7 +482,6 @@ T2P.textBandTitle						= T2P
 T2P.text								= In Prozessmodell verwandeln
 T2P.openT2P.text						= Text zu Prozess
 T2P.tooltip								= Petrinetz erzeugen
-T2P.loading								= Laden ...
 T2P.Error.ArcWeights.title              = Petrinetz-Erzeugung fehlgeschlagen
 T2P.Error.ArcWeights.message            = Das Netz besitzt Kantengewichte.\nKantengewichte werden bei der Prozessgenerierung nicht unterst\u00FCtzt..
 #*************
@@ -1726,7 +1725,7 @@ Paraphrasing.TextualDescriptionDialog.Notification.EmptyFields	= Felder d\u00FCr
 Paraphrasing.Up.Title											= Nach oben
 Paraphrasing.Up.Notification									= Bitte eine Zeile ausw\u00E4hlen
 Paraphrasing.Webservice.Success.Title							= Erfolg
-Paraphrasing.Webservice.Success.Message							= Webservice erfolgreich kontaktiert unter URL\n%0
+Paraphrasing.Webservice.Success.Message							= %0-Webservice erfolgreich kontaktiert!
 Paraphrasing.Webservice.Error.Title								= Fehler
 Paraphrasing.Webservice.Error.Exception.Message					= W\u00E4hrend der Kommunikation mit dem Webservice unter URL\n%0\nsind Fehler aufgetreten
 Paraphrasing.Webservice.Error.Webserviceexception.Message		= Konnte Webservice nicht finden unter URL\n%0
