@@ -5,6 +5,8 @@ WoPeD 3.7.1 (2018/08/01)
 - More meaningful messages and translations
 - Re-enabled BPEL tab in editor window
 - Bug fixes and clean-ups
+- New default URLs or P2T and T2P webservice
+- Better-looking AWT FileDialog used for MacOS
 
 WoPeD 3.7.0 (2018/06/26)
 - Webservice support for Text2Process
